bug_report/duckdb_bug_report/12703.txt
ID: 12703
Title: build error for fuction "strerror_r" in extention jemalloc 
Description:
### What happens?

```
/home/zzhao/Code/Work/Public/duckdb/extension/jemalloc/jemalloc/src/malloc_io.c:107:9: error: incompatible pointer to integer conversion returning 'char *' from a function with result type 'int' [-Wint-conversion]
  107 |         return strerror_r(err, buf, buflen);
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
```

cause the file  use the  "XSI-compliant" strerror_r and not use the _GNU_SOURCE version

### To Reproduce

```
CC=clang-18 CXX=clang++-18 GEN=ninja DISABLE_UNITY=1 make
```

### OS:

 Ubuntu 24.04 LTS  (Linux 6.8.0-35-generic)   x86-64

### DuckDB Version:

latest

### DuckDB Client:

cli

### Full Name:

zhao zhou

### Affiliation:

personal

### What is the latest build you tested with? If possible, we recommend testing with the latest nightly build.

I have not tested with any build

### Did you include all relevant data sets for reproducing the issue?

No - Other reason (please specify in the issue body)

### Did you include all code required to reproduce the issue?

- [X] Yes, I have

### Did you include all relevant configuration (e.g., CPU architecture, Python version, Linux distribution) to reproduce the issue?

- [X] Yes, I have